--- a/src/Docu.Console/Docu.csproj
+++ b/src/Docu.Console/Docu.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{2FB9E7C3-B602-4343-B510-9C8DBFC7B8FD}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -67,6 +67,7 @@
     <Compile Include="Console\ConsoleApplication.cs" />
     <Compile Include="Console\ConsoleScreenWriter.cs" />
     <Compile Include="Console\DoneMessage.cs" />
+    <Compile Include="Console\FileNotFoundMessage.cs" />
     <Compile Include="Console\HelpMessage.cs" />
     <Compile Include="Console\InvalidArgumentMessage.cs" />
     <Compile Include="Console\IScreenMessage.cs" />
